fix image stretching

--- a/themes/mzmc/assets/scss/_mzmc.scss
+++ b/themes/mzmc/assets/scss/_mzmc.scss
@@ -244,14 +244,14 @@
 }
 
 .example-reports .report {
-    max-width: 48%;
+    width: 100%;
     position: relative;
 }
 
 .report .report-image {
-    max-width: 100%;
-    height: 100%;
+    width: 100%;
     object-fit: cover;
+    height: 200px;
 }
 
 .report .report-overlay {
@@ -541,5 +541,9 @@ figure.effect-oscar figcaption {
     }
     .vid-alt {
         display: none !important;
+    }
+    .example-reports .report {
+        max-width: 48%;
+        position: relative;
     }
 }
